distributed-backend/kubernetes/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: ethanhaller5/admin:1.0.0
        ports:
        - containerPort: 8080
