distributed-backend/kubernetes/admin-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
      - name: admin-service
        image: ethanhaller5/admin-service:1.0.0
        ports:
        - containerPort: 8080
