distributed-backend/kubernetes/countries-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countries-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: countries-service
  template:
    metadata:
      labels:
        app: countries-service
    spec:
      containers:
      - name: countries-service
        image: ethanhaller5/countries-service:1.0.0
        ports:
        - containerPort: 8080
