distributed-backend/kubernetes/members-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: members
spec:
  replicas: 3
  selector:
    matchLabels:
      app: members
  template:
    metadata:
      labels:
        app: members
    spec:
      containers:
      - name: members
        image: ethanhaller5/members:1.0.0
        ports:
        - containerPort: 8080
