distributed-backend/kubernetes/members-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: members-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: members-service
  template:
    metadata:
      labels:
        app: members-service
    spec:
      containers:
      - name: members-service
        image: ethanhaller5/members-service:1.0.0
        ports:
        - containerPort: 8080
