distributed-backend/kubernetes/projects-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects
spec:
  replicas: 3
  selector:
    matchLabels:
      app: projects
  template:
    metadata:
      labels:
        app: projects
    spec:
      containers:
      - name: projects
        image: ethanhaller5/projects:1.0.0
        ports:
        - containerPort: 8080
