distributed-backend/kubernetes/projects-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: projects-service
  template:
    metadata:
      labels:
        app: projects-service
    spec:
      containers:
      - name: projects-service
        image: ethanhaller5/projects-service:1.0.0
        ports:
        - containerPort: 8080
