distributed-backend/kubernetes/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
