distributed-backend/kubernetes/countries-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: countries-service
spec:
  selector:
    app: countries-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
