distributed-backend/kubernetes/countries-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: countries
spec:
  selector:
    app: countries
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
