distributed-backend/kubernetes/members-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: members-service
spec:
  selector:
    app: members-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
