distributed-backend/kubernetes/members-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: members
spec:
  selector:
    app: members
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
