distributed-backend/kubernetes/partners-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: partners
spec:
  selector:
    app: partners
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
