distributed-backend/kubernetes/projects-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projects-service
spec:
  selector:
    app: projects-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
