distributed-backend/kubernetes/projects-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projects
spec:
  selector:
    app: projects
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
