distributed-backend/kubernetes/recruitment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recruitment-service
spec:
  selector:
    app: recruitment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
