distributed-backend/kubernetes/recruitment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recruitment
spec:
  selector:
    app: recruitment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
