distributed-backend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80
      - path: /countries
        pathType: Prefix
        backend:
          service:
            name: countries-service
            port:
              number: 80
      - path: /members
        pathType: Prefix
        backend:
          service:
            name: members-service
            port:
              number: 80
      - path: /partners
        pathType: Prefix
        backend:
          service:
            name: partners-service
            port:
              number: 80
      - path: /projects
        pathType: Prefix
        backend:
          service:
            name: projects-service
            port:
              number: 80
      - path: /recruitment
        pathType: Prefix
        backend:
          service:
            name: recruitment-service
            port:
              number: 80
